task-064173 fixed the button not showing issue

--- a/application/views/scss/components/_button.scss
+++ b/application/views/scss/components/_button.scss
@@ -19,6 +19,8 @@ $btn-line-height: $btn-height;
     white-space: nowrap;
     &-brand {
         @include bg-brand;
+        border-color: $brand-color;
+
         &:hover {
             color: $brand-color-inverse;
         }
